--- a/.github/workflows/gorelease.yml
+++ b/.github/workflows/gorelease.yml
@@ -19,7 +19,7 @@ jobs:
         uses: thatisuday/go-cross-build@v1
         with:
             platforms: 'linux/amd64, darwin/amd64, linux/arm'
-            package: 'simpleModbus'
-            name: 'program'
+            package: ''
+            name: 'simpleModbus'
             compress: 'true'
             dest: 'dist'
