--- a/.github/workflows/gorelease.yml
+++ b/.github/workflows/gorelease.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
+      
       - name: Generate build files
         uses: thatisuday/go-cross-build@v1
         with:
@@ -22,3 +23,11 @@ jobs:
             name: 'simpleModbus'
             compress: 'true'
             dest: 'dist'
+      
+      # step 3: upload build-artifacts
+      - name: Upload build-artifacts
+        uses: skx/github-action-publish-binaries@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: "./dist/*.tar.gz"
