--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,6 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: ./simpleModbus-linux-amd.tar.gz
-          asset_name: simpleModbus-linux-amd.tar.gz
+          asset_path: ./simpleModbus-linux-arm.tar.gz
+          asset_name: simpleModbus-linux-arm.tar.gz
           asset_content_type: application/zip
